Aqui le añadi el docker-compose

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "cadenaSQL": "Data Source=158.220.114.156;Initial Catalog=Notas;Persist Security Info=True;User ID=fisco;Password=Fisco2019+;Encrypt=False;Trust Server Certificate=True"
+    "cadenaSQL": "Server=sqlserver;Initial Catalog=Notas;User Id=sa; Password=P@ssword; Trusted_Connection=True;TrustServerCertificate=true;Integrated Security=false;"
+
   },
   "Logging": {
     "LogLevel": {
