Cambio de base de datos

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "cadenaSQL": "Data Source=158.220.114.156;Initial Catalog=Notas;Persist Security Info=True;User ID=fisco;Password=Fisco2019+;Encrypt=False;TrustServerCertificate=True"
-
+    "MongoDBConnectionString": "mongodb://CAMILO:12345@mongodb-container:27017",
+    "MongoDBDatabaseName": "NOTAS_DB"
   },
   "Logging": {
     "LogLevel": {
